welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: illegal start of simple expression
		if (!estSurBiscuit()); {avance()};
                                     ^Balin:5: error: ';' expected but 'else' found.
		else {recule(); poseBiscuit(); recule();}
                ^Balin:8: error: illegal start of simple expression
	while (!estSurBiscuit()); {recule()}};		
                                ^